# oryon

./: .gitignore  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  PERSONAL_ROADMAP.md  README.md  ROADMAP.md  index.html  llms.txt  objects.inv  pyproject.toml  requirements-dev.txt  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd.yml  ci.yml  docs.yml
api/fitting/: index.html
api/operators/: index.html
api/pipelines/: index.html
api/scalers/: index.html
benchmarks/: index.html
contributing/architecture/: index.html
contributing/doc-templates/: index.html
contributing/guide/: index.html
contributing/test-templates/: index.html
crates/oryon/: Cargo.toml
crates/oryon-python/: Cargo.toml
crates/oryon/benches/: checks.rs  diagnostics.rs  features.rs  operators.rs  ops.rs  scalers.rs  targets.rs
crates/oryon/examples/: advanced_features.rs  checks.rs  data_quality.rs  demo.rs  diagnostics.rs  feature_pipeline.rs  multi_inputs.rs  multi_outputs.rs  quickstart.rs  target_pipeline.rs
crates/oryon/src/: error.rs  lib.rs  traits.rs
crates/oryon/src/checks/: mod.rs
crates/oryon/src/diagnostics/: mod.rs
crates/oryon/src/features/: adf.rs  autocorrelation.rs  correlation.rs  ema.rs  kama.rs  kurtosis.rs  linear_slope.rs  log_return.rs  mma.rs  mod.rs  parkinson_volatility.rs  rogers_satchell_volatility.rs  shannon_entropy.rs  simple_return.rs  skewness.rs  sma.rs
crates/oryon/src/fitting/: mod.rs  standard_scaler.rs
crates/oryon/src/operators/: add.rs  divide.rs  log.rs  logit.rs  macros.rs  mod.rs  multiply.rs  neg_log.rs  reciprocal.rs  subtract.rs
crates/oryon/src/ops/: adf.rs  correlation.rs  mod.rs  regression.rs  returns.rs  stats.rs  volatility.rs
crates/oryon/src/pipeline/: dag.rs  feature_pipeline.rs  mod.rs  target_pipeline.rs
crates/oryon/src/scalers/: fixed_zscore.rs  mod.rs  rolling_zscore.rs
crates/oryon/src/targets/: future_ctc_volatility.rs  future_linear_slope.rs  future_return.rs  mod.rs
crates/oryon/src/testing/: macros.rs  mod.rs  stubs.rs
crates/oryon/src/tools/: mod.rs
docs/: hooks.py  mkdocs.yml
docs/docs/: CNAME  benchmarks.md  index.md  llms.txt  philosophy.md
docs/docs/api/: fitting.md  (+3 more)
docs/overrides/: 404.html  home.html  main.html
getting-started/installation/: index.html
getting-started/nan-convention/: index.html
getting-started/quickstart/: index.html
getting-started/streaming-vs-research/: index.html
philosophy/: index.html
python/oryon/: __init__.py  _oryon.pyi  adapters.py  datasets.py  features.py  operators.py  scalers.py  targets.py
search/: search_index.json
stylesheets/: custom.css
tests/benchmarks/: bench_features.py  bench_targets.py
tests/features/: test_adf.py  test_autocorrelation.py  test_correlation.py  test_ema.py  test_feature_pipeline.py  test_kama.py  test_kurtosis.py  test_linear_slope.py  test_log_return.py  test_mma.py  test_parkinson_volatility.py  test_rogers_satchell_volatility.py  test_shannon_entropy.py  test_simple_return.py  test_skewness.py  test_sma.py
tests/operators/: test_add.py  test_divide.py  test_log.py  test_logit.py  test_multiply.py  test_neglog.py  test_reciprocal.py  test_subtract.py
tests/scalers/: test_fixed_z_score.py  test_rolling_z_score.py
tests/targets/: test_future_linear_slope.py  test_targets.py
(+30 files in other folders)
