[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oryon"
version = "0.2.0"
requires-python = ">=3.9,<3.15"
description = "Institutional-grade feature and target engineering for quantitative research."
license = { text = "MIT" }

[tool.maturin]
python-source = "python"
module-name = "oryon._oryon"
manifest-path = "crates/oryon-python/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/features", "tests/targets"]


[tool.poetry.dependencies]
notebook = "^7.5.5"
[dependency-groups]
doc = [
    "mkdocs (>=1.6.1,<2.0.0)",
    "mkdocs-material (>=9.7.6,<10.0.0)",
    "mkdocstrings[python]>=0.25"
]
dev = [
    "ruff (>=0.15.8,<0.16.0)"
]
