[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "oryon"
version = "0.2.5"
requires-python = ">=3.9,<3.14"
description = "Production-grade feature and target engineering for quantitative research."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Lucas Inglese", email = "lucas@quantreo.com" }
]
keywords = ["quantitative finance", "feature engineering", "machine learning", "trading", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial",
]

[project.urls]
Homepage = "https://oryonlib.dev"
Documentation = "https://oryonlib.dev"
Repository = "https://github.com/lucasinglese/oryon"
Changelog = "https://github.com/lucasinglese/oryon/blob/main/CHANGELOG.md"

[tool.maturin]
python-source = "python"
module-name = "oryon._oryon"
manifest-path = "crates/oryon-python/Cargo.toml"

[tool.pytest.ini_options]
testpaths = ["tests/features", "tests/targets"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]