[package]
name = "oryon"
version = "0.2.0"
edition = "2021"
description = "Institutional-grade feature and target engineering for quantitative research."
license = "MIT"
repository = "https://github.com/lucasinglese/oryon"

[dependencies]
smallvec = "1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "features"
harness = false

[[bench]]
name = "ops"
harness = false

[[bench]]
name = "targets"
harness = false

[[bench]]
name = "checks"
harness = false

[[bench]]
name = "diagnostics"
harness = false